--- a/hdi/hdi_wms/views/warehouse_layout_views.xml
+++ b/hdi/hdi_wms/views/warehouse_layout_views.xml
@@ -5,17 +5,17 @@
     <record id="action_warehouse_layout_map" model="ir.actions.act_window">
         <field name="name">Sơ đồ Kho</field>
         <field name="res_model">hdi.warehouse.layout</field>
-        <field name="view_mode">tree,form,qweb</field>
+        <field name="view_mode">list,form,qweb</field>
         <field name="target">main</field>
     </record>
 
-    <!-- ===== TREE VIEW ===== -->
+    <!-- ===== LIST VIEW ===== -->
     <record id="view_warehouse_layout_tree" model="ir.ui.view">
-        <field name="name">hdi.warehouse.layout.tree</field>
+        <field name="name">hdi.warehouse.layout.list</field>
         <field name="model">hdi.warehouse.layout</field>
-        <field name="type">tree</field>
+        <field name="type">list</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="warehouse_id"/>
                 <field name="rows"/>
@@ -25,7 +25,7 @@
                 <field name="occupied_slots"/>
                 <field name="total_slots"/>
                 <field name="state"/>
-            </tree>
+            </list>
         </field>
     </record>
 
