--- a/hdi/hdi_wms/views/warehouse_layout_views.xml
+++ b/hdi/hdi_wms/views/warehouse_layout_views.xml
@@ -37,8 +37,8 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="action_activate" string="Activate" type="object" class="btn-primary" states="draft"/>
-                    <button name="action_archive" string="Archive" type="object" states="active"/>
+                    <button name="action_activate" string="Activate" type="object" class="btn-primary" invisible="state != 'draft'"/>
+                    <button name="action_archive" string="Archive" type="object" invisible="state != 'active'"/>
                     <button name="action_view_grid" string="View Grid Map" type="object" class="btn-info"/>
                     <field name="state" widget="statusbar" options="{'clickable': False}"/>
                 </header>
