--- a/hdi/hdi_wms/views/wms_menus.xml
+++ b/hdi/hdi_wms/views/wms_menus.xml
@@ -4,7 +4,7 @@
               name="Quản lý Kho"
               parent="stock.menu_stock_root"
               sequence="15"
-              groups="group_wms_user"/>
+              groups="hdi_wms.group_wms_user"/>
 
     <menuitem id="menu_batch"
               name="Lô hàng / Pallet"
@@ -40,7 +40,7 @@
               name="Kiểm kê"
               parent="menu_wms_root"
               sequence="40"
-              groups="group_wms_user"/>
+              groups="hdi_wms.group_wms_user"/>
 
     <menuitem id="menu_inventory_check_batch"
               name="Kiểm kê theo Batch"
