--- a/hdi/warehouse_map/wizard/picking_map_assignment_wizard_views.xml
+++ b/hdi/warehouse_map/wizard/picking_map_assignment_wizard_views.xml
@@ -31,7 +31,7 @@
                         <field name="suggested_putaway_ids" nolabel="1">
                             <tree>
                                 <field name="product_id"/>
-                                <field name="suggested_location_id"/>
+                                <field name="location_id"/>
                                 <field name="priority"/>
                                 <field name="map_posx"/>
                                 <field name="map_posy"/>
